# cmake_project_example

./: CMakeLists.txt  Dependency.cmake  README.md
src/: main.cpp
